// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ipa2senyn: kai 1`] = `
Array [
  "k",
  "ai",
]
`;

exports[`ipa2senyn: m̩ 1`] = `
Array [
  "",
  "m̩",
]
`;

exports[`ipa2senyn: pã 1`] = `
Array [
  "p",
  "ã",
]
`;

exports[`ipa2senyn: ɿ 1`] = `
Array [
  "",
  "ɿ",
]
`;

exports[`query 1`] = `
Array [
  Object {
    "读": Object {
      "IPA": Object {
        "声": "tʃ",
        "音": "tʃoŋ",
        "韵": "oŋ",
      },
      "XPA": Object {
        "声": "zh",
        "音": "zhong",
        "韵": "ong",
      },
      "format": [Function],
      "toIPA": [Function],
      "toXPA": [Function],
    },
    "调": Object {
      "调值": 33,
      "调号": 1,
      "调名": "阴平",
      "调序": 1,
      "调符": "˧˧",
    },
    "释": "",
  },
  Object {
    "读": Object {
      "IPA": Object {
        "声": "tʃ",
        "音": "tʃoŋ",
        "韵": "oŋ",
      },
      "XPA": Object {
        "声": "zh",
        "音": "zhong",
        "韵": "ong",
      },
      "format": [Function],
      "toIPA": [Function],
      "toXPA": [Function],
    },
    "调": Object {
      "调值": 55,
      "调号": 5,
      "调名": "阴去",
      "调序": 4,
      "调符": "˥˥",
    },
    "释": "",
  },
]
`;
